--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,13 @@
 <resources>
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="android:textColor">#312e38</item>
+    <item name="android:statusBarColor">@color/app_bg</item>
+    <item name="android:windowLightStatusBar">false</item>
+    <item name="android:windowBackground">@color/app_bg</item>
+  </style>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="android:textColor">#000000</item>
-    </style>
-
+  <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="android:statusBarColor">@color/splashscreen_bg</item>
+    <item name="android:background">@drawable/background_splash</item>
+  </style>
 </resources>
